    - UltraDefrag Scheduler has been retired as a component less functional
      than standard Windows Task Scheduler;
      visit http://ultradefrag.wikispaces.com/ for tutorials on scheduling
      disk defragmentation tasks through Windows Task Scheduler
    - --wait option was added to the command line interface to make scheduled
      defragmentation more flexible
    - more reliable monolithic boot time defragmenter was made
    - few bugs preventing the correct MFT displaying were fixed in driver
	- fixed a bug preventing OS version check to work on later Windows versions
    - one little bug preventing displaying system files in green color
      on NTFS volumes was fixed
    - cluster map appearance in GUI was improved and made absolutely
      independent from the screen DPI
    - cluster map block size was made customizable in GUI through map_block_size
      and grid_line_width parameters added to guiopts.lua configuration file
    - the following translations were updated:

      Czech, Finnish, Japanese, Spanish (AR), Portuguese (BR)

    - update check was added to the GUI
    - installer was updated to include publisher, version, estimated size,
      custom icon and support link in uninstall information
    - sources were cleaned up by removing the obsolete 
      kernel mode driver support at all
    - for programmers: winx_create_thread improved, udefrag.dll interface
      optimized (function prototypes changed!)


  Version 4.2.0  2010-03-30
  ------------------------------------------------------------------------------
    - multiple drives selection feature was added to GUI and Scheduler
    - progress indication was improved to be more detailed and smooth
    - defragmentation and optimization speedup was performed
    - --all, --all-fixed command line switches added to the console interface
      and to the boot time defragmenter
    - boot time interface initialization speedup was performed