@@ -8,6 +8,7 @@ HISTORY
       disk defragmentation tasks through Windows Task Scheduler
     - --wait option was added to the command line interface to make scheduled
       defragmentation more flexible
+    - --use-entire-window option was added to the command line interface
     - more reliable monolithic boot time defragmenter was made
     - few bugs preventing the correct MFT displaying were fixed in driver
 	- fixed a bug preventing OS version check to work on later Windows versions
